--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "json-server --watch db.json --port 3000 -m ./node_modules/json-server-auth"
+    "dev": "concurrently \"vite\" \"json-server --watch db.json --port 3000 -m ./node_modules/json-server-auth\"",
+    "build": "vite build",
+    "serve": "vite preview"
   },
   "devDependencies": {
     "vite": "^6.2.0"
   },
   "dependencies": {
+    "concurrently": "^9.1.2",
     "json-server": "^0.17.4",
     "json-server-auth": "^2.1.0",
     "navigo": "^8.11.1"
