--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "concurrently": "^9.1.2",
     "json-server": "^0.17.4",
     "json-server-auth": "^2.1.0",
-    "navigo": "^8.11.1"
+    "navigo": "^8.11.1",
+    "toastify-js": "^1.12.0"
   }
 }
